--- a/homecss.css
+++ b/homecss.css
@@ -3,66 +3,77 @@
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.header{
-    width: 99.45vw;
-    height: 100px;
-    /* O linear gradient cria um degradê de cores,
-    45 deg significa 45 graus (a direção em que essas cores serão alinhadas)*/
-    background-color: black;
-    border: white 4px solid;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.container{
-    width: 80%;
-    height: 100%;
-    /* margin:auto O navegador seleciona uma margem adequada para utilizar. 
-    Por exemplo, em alguns casos este valor pode ser utilizado para centralizar o elemento.*/
-    margin: auto;
-}
-.container img{
-    height: 90px;
-    border-radius: 80px;
-    width: 90px;
-}
-.header .container {
-    display: flex;
-    /* justify-content: space-between
-    coloca um espaço entre os elementos*/
-    justify-content: space-between;
-    align-items: center;
-}
-.navbar{
-    display: flex;
-    flex-direction: row;
-    /*list-style: none
-    Retira a estilização padrão (cor roxa) da lista */
-    list-style: none;
-    width: 40%;
-    justify-content: space-between;
-}
-.navbar .active{
-    font-weight: bolder;
-}
-.navbar a{
-    color: white;
-}
 .imagem{
     background-image: url(esportes.png);
-        /* no-repeat para a imagem não se repetir */
         background-repeat: no-repeat;
-        /* Cover para a imagem cobrir todo o conteúdo da div */
         background-size: cover;
-        /* attachment: fixed para a imagem ficar fixada e dar um efeito ao rolar a página para baixo*/
         background-attachment: fixed;
         height: 500px;
-        width: 99.45vw;
-        margin-bottom: 50px;
-        margin-top: 4px;
-
+        width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
 }
 .imagem .escrita {
     color: white;
+    width: 250px;
+    font-weight: bolder;
+    margin-left: -400px;
+    font-size: 26px;
+}
+.red .redhome{
+    width: 100px;
+    height: 100%;
+    margin-left: 350px;
+    text-align: center;
+    
+}
+.red .redsimulador{
+    width: 100px;
+    height: 100%;
+    margin-right: 50px;
+    text-align: center;
+
+}
+.blue .bluelogin{
+    width: 100px;
+    height: 100%;
+    margin-left: 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+
+}
+.blue .bluecadastro{
+    width: 100px;
+    height: 100%;
+    margin-right: 350px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.red{
+    height: 100px;
+    background-color: red;
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    float: left;
+    border-bottom: black solid 5px;
+}
+.blue{
+    height: 100px;
+    background-color: blue;
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    border-bottom: black solid 5px;
+}
+.blue a{
+    color: black;
+    
+}
+.red a{
+    color: black;
+    
 }
