--- a/logcad.css
+++ b/logcad.css
@@ -18,7 +18,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
-        height: 600px;
+        height: 650px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -111,4 +111,12 @@ a{
 }
 .active{
     font-weight: bolder;
+}
+.login_usu{
+    background-color: blue;
+    width: 450px;
+    height: 450px;
+    margin-top: 100px;
+    box-shadow: black 7px 7px 7px;
+    border: black solid 2px;
 }
