--- a/logcad.css
+++ b/logcad.css
@@ -9,7 +9,6 @@
     justify-content: space-between;
     width: 100%;
     float: left;
-    border-bottom: white solid 5px;
     position: fixed;
 }
 
@@ -147,7 +146,7 @@ a{
 .cadastro_usu{
     background: linear-gradient(rgb(6, 6, 24),rgb(19, 10, 73));
     width: 400px;
-    height: 500px;
+    height: 520px;
     margin-top: 90px;
     box-shadow: black 7px 7px 7px;
     border: black solid 2px;
@@ -175,4 +174,11 @@ a{
     height: 30px;
     color: white;
     background-color: black;
+}
+#senha_cad{
+    margin-left: 40px;
+}
+.cadastro_usu img{
+    background-color: white;
+    border-radius: 10px;
 }
