--- a/api-projeto-site/public/index.css
+++ b/api-projeto-site/public/index.css
@@ -37,13 +37,14 @@
     height: 100%;
     margin-left: 350px;
     text-align: center;
+    transition: 1s;
 }
 .navbar .simulador{
     width: 100px;
     height: 100%;
     margin-right: 50px;
     text-align: center;
-
+    transition: 1s;
 }
 .navbar .login{
     width: 100px;
@@ -52,6 +53,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    transition: 1s;
 
 }
 .navbar .cadastro{
@@ -61,6 +63,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    transition: 1s;
 }
 .navbar a{
     color: white;
@@ -71,26 +74,18 @@
 }
 .navbar .home:hover{
     background: linear-gradient(blue,rgb(0, 145, 255), white);
-    transition: 0.80s;
-    animation: 3s;
     box-shadow: black 7px 7px 7px;
 }
 .navbar .simulador:hover{
     background: linear-gradient(blue,rgb(0, 145, 255), white);
-    transition: 0.80s;
-    animation: 3s;
     box-shadow: black 7px 7px 7px;
 }
 .navbar .login:hover{
     background: linear-gradient(blue,rgb(0, 145, 255), white);
-    transition: 0.80s;
-    animation: 3s;
     box-shadow: black 7px 7px 7px;
 }
 .navbar .cadastro:hover{
     background: linear-gradient(blue,rgb(0, 145, 255), white);
-    transition: 0.80s;
-    animation: 3s;
     box-shadow: black 7px 7px 7px;
 }
 .footer{
@@ -110,4 +105,88 @@ a{
 }
 .active{
     font-weight: bolder;
+}
+.login_usu{
+    background: linear-gradient(rgb(6, 6, 24),rgb(19, 10, 73));
+    width: 400px;
+    height: 350px;
+    margin-top: 100px;
+    box-shadow: black 7px 7px 7px;
+    border: black solid 2px;
+    text-align: center;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.login_usu h2{
+    padding-top: 18px;
+}
+.login_usu h3{
+    padding-top: 28px;
+}
+.login_usu input{
+    padding: 6px;
+    margin: 10px;
+    border-radius: 10px;
+    text-align: center;
+    border: black 3px solid;
+}
+.login_usu button{
+    padding: 5px;
+    border-radius: 10px;
+    width: 90px;
+    height: 30px;
+    color: white;
+    background-color: black;
+}
+.login_usu img{
+    background-color: white;
+    border-radius: 10px;
+}
+.cadastro_usu{
+    background: linear-gradient(rgb(6, 6, 24),rgb(19, 10, 73));
+    width: 400px;
+    height: 450px;
+    margin-top: 90px;
+    box-shadow: black 7px 7px 7px;
+    border: black solid 2px;
+    text-align: center;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.cadastro_usu h2{
+    padding-top: 10px;
+}
+.cadastro_usu h3{
+    padding-top: 10px;
+}
+.cadastro_usu input{
+    padding: 6px;
+    margin: 10px;
+    border-radius: 10px;
+    text-align: center;
+    border: black 3px solid;
+}
+.cadastro_usu button{
+    padding: 5px;
+    border-radius: 10px;
+    width: 90px;
+    height: 30px;
+    color: white;
+    background-color: black;
+}
+#senha_cad{
+    margin-left: 40px;
+}
+.cadastro_usu img{
+    background-color: white;
+    border-radius: 10px;
+}
+#botao_{
+    transition: 0.8s;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#botao_:hover{
+    background-color: white;
+    color: black;
+    width: 120px;
 }
