--- a/api-projeto-site/public/index.css
+++ b/api-projeto-site/public/index.css
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        /* box-shadow: black 3px 7px 7px; */
 }
 .imagem .escrita {
     color: white;
@@ -147,7 +148,7 @@ a{
     width: 400px;
     height: 450px;
     margin-top: 90px;
-    box-shadow: black 7px 7px 7px;
+    box-shadow: black 7px 7px 4px;
     border: black solid 2px;
     text-align: center;
     color: white;
@@ -190,3 +191,203 @@ a{
     color: black;
     width: 120px;
 }
+.imc{
+    width: 100%;
+    padding-top: 50px;
+    height: 50vh;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(237, 237, 237);
+}
+.imc_texto{
+    color: black;
+    text-align: center;
+    width: 800px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.input_azul{
+    text-align: center;
+    height: 30px;
+    width: 150px;
+    border-radius: 25px;
+    border: solid 2px rgb(0, 217, 255);
+    background-color: rgb(255, 255, 255);
+    color: white;
+    transition: 1s;
+}
+.input_azul:hover{
+    border:  solid 2px rgb(0, 153, 255);
+    background-color: rgb(0, 217, 255);
+    color: black;
+    width: 190px;
+}
+.ajuste{
+    width: 100%;
+    height: 100px;
+}
+.calculadora{
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+    background-color: rgb(237, 237, 237);
+}
+.bot_azul{
+    border:  solid 2px rgb(0, 153, 255);
+    background-color: rgb(0, 217, 255);
+    border-radius: 25px;
+    height: 35px;
+    width: 120px;
+    cursor: pointer;
+}
+.bot_azul:hover{
+    border:  solid 2px rgb(0, 153, 255);
+    background-color: rgb(0, 153, 255);
+} 
+.dash-container {
+    display: flex; /* por padrão, possui o 'flex-direction: row' (linha), e alinha os elementos filhos, distribuindo de maneira equivalente */
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; /* serve para 'agarrar' os elementos filhos, de maneira que quebra de linha se os elementos filhos 'transbordarem' deste elemento */
+    text-align: center;
+}
+.graph {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #eaeaea;
+    width: 40vw;
+    height: 35vh;
+    margin: 10px;
+    padding: 5px;
+    background-color: rgb(190, 208, 235);
+    box-shadow: black 3px 3px 3px;
+}
+.graficos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.graficos2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.saúde{
+    width: 100%;
+    height: 710px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.saúde h2{
+    margin-bottom: 5px;
+    text-align: center;
+}
+.saude_titulo{
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.saude_titulo h1{
+    padding-top: 20px;
+}
+.est_aut{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.estresse{
+    text-align: center;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    /* border: black 2px solid; */
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.autocon{
+    width: 40%;
+    /* border: black 2px solid; */
+    text-align: center;
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.cog_con{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+.concentracao{
+    text-align: center;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    /* border: black 2px solid; */
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.cognitivas{
+    text-align: center;
+    width: 40%;
+    /* border: black 2px solid; */
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.pe_fi{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+.peso{
+    text-align: center;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    /* border: black 2px solid; */
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.fisico{
+    width: 40%;
+    /* border: black 2px solid; */
+    text-align: center;
+    border-radius: 20px;
+    /* box-shadow: black 2px 3px 3px; */
+}
+.espaco{
+    height: 170px;
+}
+.herois_nacionais{
+    display: flex;
+    flex-direction: column;
+}
+.olimpiadas{
+    margin-left: 10%;
+    height: 400px;
+    background-image: url('http://cnsasousa.com.br/wp_system/wp-content/uploads/2016/06/an%C3%A9is-olimpicos.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-attachment: fixed; */
+    height: 600px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.olimpiadas .escrita {
+    color: white;
+    width: 550px;
+    font-weight: bolder;
+    margin-left: -300px;
+    font-size: 26px;
+    padding-top: 170px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(0, 153, 255);
+}
+  
