--- a/api-projeto-site/public/index.css
+++ b/api-projeto-site/public/index.css
@@ -7,7 +7,7 @@
     background: linear-gradient(rgb(6, 6, 24),rgb(19, 10, 73));
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     float: left;
     position: fixed;
     flex-direction: row;
@@ -29,25 +29,43 @@
     color: white;
     width: 550px;
     font-weight: bolder;
-    margin-left: -300px;
+    margin-left: 250px;
     font-size: 26px;
     padding-top: 170px;
     font-family: "Montserrat";
-
+}
+.imagem .marketing {
+    position: relative;
+    margin-left: 350px;
+    bottom: 170px;
+    color: #fff;
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: bolder;
+}
+.imagem .marketing a{
+    text-decoration: none;
+    color: rgb(0, 255, 187);
+    font-family: monospace;
+    transition: 0.5s;
+}
+.imagem .marketing a:hover{
+    color: rgb(97, 255, 44);
+    font-size: 22px;
 }
 .navbar .home{
     width: 100px;
     height: 100%;
     margin-left: 350px;
     text-align: center;
-    transition: 1s;
+    transition: 0.35s;
 }
 .navbar .simulador{
     width: 100px;
     height: 100%;
     margin-right: 50px;
     text-align: center;
-    transition: 1s;
+    transition: 0.35s;
 }
 .navbar .login{
     width: 100px;
@@ -56,8 +74,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    transition: 1s;
-
+    transition: 0.35s;
 }
 .navbar .cadastro{
     width: 100px;
@@ -66,7 +83,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    transition: 1s;
+    transition: 0.35s;
 }
 .navbar a{
     color: white;
@@ -351,103 +368,81 @@ a{
     text-align: center;
     border-radius: 20px;
 }
-.espaco{
-    height: 100px;
+.carrossel{
+    width: 750px;
+    height: 450px;
+    overflow: hidden;
+    margin-top: 15px;
 }
-.olimpiadas{
-    background-image: url('https://www.hollywoodreporter.com/wp-content/uploads/2021/06/issue24-Report-Olympics-Illustration_by_KyleEllingson.gif?w=681&h=383&crop=1');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 600px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.herois_nacionais1{
-    display: flex;
-    width: 100%;
-    height: 400px;
-    background-color: #FCFEF0;
-    font-family: "Montserrat";
-}
-.herois_nacionais2{
-    display: flex;
-    width: 100%;
-    height: 400px;
-    background-color: rgb(217, 217, 252);
-    font-family: "Montserrat";
-}
-.imagem_1{
-    margin-top: 5%;
-    display: flex;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-.imagem_1 img{
-    border-radius: 15px;
-    box-shadow: 5px 5px 5px;
-}
-.primeiro_texto{
-    margin-top: 5%;
-    width: 25%;
-    margin-right: 10%;
+.meio{
+    top: 50%;
+    left: 50%;
     position: relative;
-    text-align: center;
-    top: 65px;
-    left: 130px;
+    transform: translate(-50%,0);
+    border-radius: 10px;
 }
-.segundo_texto{
-    margin-top: 5%;
-    width: 25%;
-    margin-right: 10%;
-    position: relative;
-    text-align: center;
-    top: 60px;
-    left: 130px;
-}
-.imagem_2{
-    margin-top: 5%;
+.navegacao{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
-    margin-left: 20%;
-    margin-right: 10%;
 }
-.imagem_2 img{
-    border-radius: 15px;
-    box-shadow: 5px 5px 5px;
+.barra{
+    width: 50px;
+    height: 10px;
+    border: 2px solid #fff;
+    margin: 6px;
+    cursor: pointer;
 }
-.curiosidades{
-    width: 100vw;
-    z-index: 2;
-    display: grid;
-    place-items: center;
-    height: 70vh;
+.barra:hover{
+    background-color: #fff;
+
 }
-#items_wrapper{
-    z-index: 2;
-    /* margin-left: 420px; */
-    width: 60vw;
+input[name="r"]{
+    position: absolute;
+    visibility: hidden;
+}
+.imagens{
+    width: 1000%;
+    height: 100%;
+    display: flex;
+}
+.ima{
+    width: 10%;
+    transition: 1s;
+}
+.ima img{
+    width: 100%;
     height: 100%;
 }
-#items{
-    z-index: 2;
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    border-radius: 15px;
+#r1:checked ~ .s1{
+    margin-left: 0;
 }
-#items_wrapper img{
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+#r2:checked ~ .s1{
+    margin-left: -10%;
 }
-.item{
-    z-index: 2;
-    flex: none;
-    width: 100%;
-    height: 400px;
-    scroll-snap-align: start;
-    pointer-events: none;
+#r3:checked ~ .s1{
+    margin-left: -20%;
+}
+#r4:checked ~ .s1{
+    margin-left: -30%;
+}
+#r5:checked ~ .s1{
+    margin-left: -40%;
+}
+#r6:checked ~ .s1{
+    margin-left: -50%;
+}
+#r7:checked ~ .s1{
+    margin-left: -60%;
+}
+#r8:checked ~ .s1{
+    margin-left: -70%;
+}
+#r9:checked ~ .s1{
+    margin-left: -80%;
+}
+#r10:checked ~ .s1{
+    margin-left: -90%;
 }
