Término da página esportes e home

--- a/api-projeto-site/public/herois.css
+++ b/api-projeto-site/public/herois.css
@@ -125,7 +125,7 @@
     width: 25%;
     margin-right: 10%;
     position: relative;
-    text-align: center;
+    text-align: left;
     top: 65px;
     left: 130px;
 }
@@ -134,7 +134,7 @@
     width: 25%;
     margin-right: 10%;
     position: relative;
-    text-align: center;
+    text-align: left;
     top: 60px;
     left: 130px;
 }
